--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			</div>
 			<div class="content">
 				<div class="inner">
-					<h1>Dimension</h1>
+					<h1>Havas Helia</h1>
 					<p>
 						<!--[-->A fully responsive site template designed by <a href="https://html5up.net">HTML5 UP</a>
 						and released
