--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
 				<div class="inner">
 					<h1>Havas Helia</h1>
 					<p>
-						<!--[-->A fully responsive site template designed by <a href="https://html5up.net">HTML5 UP</a>
-						and released
+						<!--[-->We transform brands through meaningful relationships
 						<!--]--><br />
 						<!--[-->for free under the <a href="https://html5up.net/license">Creative Commons</a> license.
 						<!--]-->
